<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fresh_air"
    tools:context=".InfoProdutoFuncionarioActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/usafa_blue"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_horizontal1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.06"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.94" />

    <Button
        android:id="@+id/btn_voltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_backgrd_white"
        android:text="@string/voltar"
        android:textColor="@color/black_olive"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal1"
        app:layout_constraintStart_toEndOf="@+id/guideline_vertical1"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80" />

    <TableLayout
        android:id="@+id/tabela"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal2"
        app:layout_constraintEnd_toStartOf="@id/guideline_vertical2"
        app:layout_constraintStart_toEndOf="@id/guideline_vertical1"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_nome_lable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:textColor="@color/black"
                android:text="@string/nome_produto" />

            <TextView
                android:id="@+id/tv_nome_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.85"
                android:background="@drawable/round_backgrd_fresh"
                android:textColor="@color/black"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_qtdstock_lable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:textColor="@color/black"
                android:text="@string/qtd_stock" />

            <TextView
                android:id="@+id/tv_qtdstock_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.85"
                android:background="@drawable/round_backgrd_fresh"
                android:textColor="@color/black"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_minstock_lable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:textColor="@color/black"
                android:text="@string/qtd_alert_stock" />

            <TextView
                android:id="@+id/tv_minstock_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.85"
                android:background="@drawable/round_backgrd_fresh"
                android:textColor="@color/black"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_qtdprateleira_lable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:textColor="@color/black"
                android:text="@string/qtd_prateleira" />

            <TextView
                android:id="@+id/tv_qtdprateleira_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.85"
                android:background="@drawable/round_backgrd_fresh"
                android:textColor="@color/black"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_minprateleira_lable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:textColor="@color/black"
                android:text="@string/qtd_alert_prateleira" />

            <TextView
                android:id="@+id/tv_minprateleira_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.85"
                android:background="@drawable/round_backgrd_fresh"
                android:textColor="@color/black"
                android:text="" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btn_repor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_backgrd_usafa"
        android:text="@string/repor"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline_vertical1"
        app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal2" />

    <Button
        android:id="@+id/btn_pegar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_backgrd_usafa"
        android:text="@string/pegar"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
        app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal2"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>