<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fresh_air"
    tools:context=".HomeAdmActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/usafa_blue"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_horizontal1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.06"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.94" />

    <EditText
        android:id="@+id/etx_buscar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_backgrd_white"
        android:ems="10"
        android:hint="@string/buscar"
        android:textColor="@color/black_olive"
        android:inputType="text"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toStartOf="@+id/btn_usuario"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="0.40"
        app:layout_constraintStart_toEndOf="@+id/btn_novo"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <Button
        android:id="@+id/btn_novo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_backgrd_dollar"
        android:text="@string/novo"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@+id/etx_buscar"
        app:layout_constraintEnd_toStartOf="@+id/etx_buscar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintHorizontal_weight="0.25"
        app:layout_constraintStart_toEndOf="@+id/guideline_vertical1"
        app:layout_constraintTop_toTopOf="@+id/etx_buscar" />

    <Button
        android:id="@+id/btn_usuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_backgrd_dollar"
        android:text="@string/usuario"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@+id/etx_buscar"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="0.25"
        app:layout_constraintStart_toEndOf="@+id/etx_buscar"
        app:layout_constraintTop_toTopOf="@+id/etx_buscar" />

    <ListView
        android:id="@+id/list_produtos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/button_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
        app:layout_constraintStart_toEndOf="@+id/guideline_vertical1"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal1" />

</androidx.constraintlayout.widget.ConstraintLayout>